--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.signup_persona"></activity>
+        <activity android:name=".Activities.signup_ministerio"></activity>
+        <activity android:name=".Activities.signup_persona" />
         <activity android:name=".Activities.Login" />
         <activity
             android:name=".MainActivity"
